# akarpov

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  local.yml  manage.py  merge_production_dotenvs_in_dotenv.py  production.yml  prof_start.py  pyproject.toml  pytest.ini  setup.cfg  spacy_setup.sh
.envs/.local/: .django  .postgres
.envs/.production/: .django
.github/: dependabot.yml
.github/workflows/: ci.yml
about_page/: about.html
akarpov/: conftest.py
akarpov/about/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
akarpov/about/api/: serializers.py  urls.py  views.py
akarpov/about/migrations/: 0001_initial.py  0002_projectchange.py  0003_faq.py
akarpov/blog/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  sitemaps.py  urls.py  views.py
akarpov/blog/api/: serializers.py  urls.py  views.py
akarpov/blog/migrations/: 0001_initial.py  0002_alter_comment_options.py  0003_post_short_link.py  0004_alter_post_short_link.py  0005_alter_post_slug.py  0006_post_public.py  0007_alter_comment_options_alter_commentrating_options_and_more.py  0008_tag_seo_tags.py  0009_alter_comment_parent.py  0010_alter_tag_color.py  0011_alter_post_body.py
akarpov/blog/services/: post.py
akarpov/common/: api.py  channels.py  forms.py  jwt.py  models.py  signals.py  tasks.py  views.py
akarpov/common/api/: permissions.py  serializers.py
akarpov/common/ml/: text.py
akarpov/contrib/chunked_upload/: admin.py  models.py  response.py  settings.py  views.py
akarpov/files/: admin.py  apps.py  consts.py  documents.py  filters.py  forms.py  models.py  search_indexes.py  signals.py  signlas.py  sitemaps.py  tables.py  tasks.py  urls.py  views.py
akarpov/files/api/: urls.py
akarpov/files/migrations/: 0001_initial.py  0001_squashed_0016_alter_file_file_type_alter_file_name.py  0002_alter_basefile_options_alter_folder_options_and_more.py  0003_basefile_short_link_folder_short_link.py  0004_alter_basefile_short_link_alter_folder_short_link.py  0005_alter_basefile_description_alter_basefile_folder_and_more.py  0006_alter_basefile_slug.py  0007_file_alter_folder_parent_delete_basefile_file_folder_and_more.py  0008_file_completed_on_file_created_on_file_filename_and_more.py  0009_remove_file_completed_on_remove_file_created_on_and_more.py  0010_fileintrash.py  0011_file_file_type_alter_file_description_and_more.py  0012_alter_file_options_alter_file_file.py  0013_alter_file_options.py  0014_alter_fileintrash_file.py  0015_fileintrash_name.py  0016_alter_file_file_type_alter_file_name.py  0017_alter_folder_options_rename_file_file_file_obj_and_more.py  0018_remove_file_created_remove_file_modified_and_more.py  0019_alter_basefileitem_options_alter_file_options_and_more.py  0020_folder_size.py  0021_folder_amount_folder_private.py  0022_basefileitem_download_basefileitem_views_filereport.py  0023_rename_download_basefileitem_downloads_and_more.py  0024_alter_file_options_alter_filereport_options_and_more.py  0025_create_vector_ps.py  0025_file_notify_user_on_view_alter_basefileitem_parent.py  0026_file_embeddings.py  0027_merge_20230925_2023.py  0028_file_content_file_lang.py  0029_remove_file_embeddings_remove_file_lang_and_more.py  0030_auto_20231107_0023.py
akarpov/files/previews/: __init__.py
akarpov/files/services/: files.py  folders.py  lema.py  preview.py  search.py  text.py
akarpov/fixtures/: projects.json
akarpov/gallery/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
akarpov/gallery/api/: serializers.py  urls.py  views.py
akarpov/gallery/migrations/: 0001_initial.py  0002_image_extra_data_image_image_city_and_more.py  0003_alter_collection_options_alter_image_options.py  0004_image_public.py
akarpov/music/: admin.py  apps.py  consumers.py  documents.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
akarpov/music/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
akarpov/music/migrations/: 0001_initial.py  0002_alter_playlist_options.py  0003_remove_song_author_remove_songinque_song_and_more.py  0004_radiosong.py  0005_radiosong_start.py  0006_tempfileupload.py  0007_song_creator.py  0008_song_meta.py  0009_alter_songinque_name_alter_songinque_status.py  0010_song_likes_songuserrating.py  0011_alter_playlist_private_userlistenhistory.py  0012_album_meta_author_albums_author_meta.py  0013_remove_author_albums_album_authors_alter_album_name_and_more.py  0014_alter_album_authors.py  0015_usermusicprofile.py  0016_anonmusicuser_song_created_song_volume_and_more.py  0016_song_volume.py  0017_downloadconfig_downloadjob_downloadtrack_and_more.py  0017_musicdraft_musicdraftfile.py
akarpov/music/services/: base.py  db.py  drafts.py  (+8 more)
akarpov/notifications/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py
akarpov/pipeliner/: apps.py  models.py
akarpov/shortener/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
akarpov/templates/: base.html  email_template.html
akarpov/test_platform/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
akarpov/tools/: apps.py  urls.py
akarpov/users/: admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  sitemaps.py  tasks.py  urls.py  views.py
akarpov/utils/: base.py  cache.py  celery.py  channels.py  choices.py  commands.py  config.py  consts.py  factory.py  faker.py  files.py  forms.py  generators.py  log.py  models.py  nums.py  pytest_factoryboy.py  query.py  storage.py  string.py  text.py  validators.py  zip_field.py
config/: api_router.py  asgi.py  celery_app.py  routing.py  sitemaps.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
redirect/: __init__.py  __main__.py  app.py  settings.py  util.py
redirect/db/: __init__.py  curd.py  dependency.py  models.py
requirements/: base.txt  local.txt  production.txt
search/: pipeline.py  pyproject.toml
(+242 files in other folders)
