[tool.poetry]
name = "akarpov"
version = "0.1.0"
description = ""
authors = ["Alexandr Karpov <alexandr.d.karpov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2022.7"
psutil = "^5.9.4"
python-slugify = "^7.0.0"
pillow = "^9.3.0"
argon2-cffi = "^21.3.0"
whitenoise = "^6.3.0"
redis = "^4.4.0"
hiredis = "^2.2.2"
celery = {extras = ["redis"], version = "^5.2.7"}
django-celery-beat = "^2.5.0"
flower = "^1.2.0"
django = "^4.1.7"
django-health-check = "^3.17.0"
django-structlog = "^4.0.1"
django-environ = "^0.9.0"
django-model-utils = "^4.3.1"
django-allauth = "^0.51.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
django-redis = "^5.2.0"
django-ckeditor = "^6.5.1"
django-colorfield = "^0.8.0"
djangorestframework = "^3.14.0"
django-rest-auth = "^0.9.5"
django-cors-headers = "^3.13.0"
drf-spectacular = "^0.26.0"
werkzeug = {extras = ["watchdog"], version = "^2.2.2"}
ipdb = "^0.13.13"
watchfiles = "^0.18.1"
mypy = "^0.991"
django-stubs = {extras = ["compatible-mypy"], version = "^1.14.0"}
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.8.0"}
sphinx = "^6.1.1"
sphinx-autobuild = "^2021.3.14"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
coverage = "^7.2.1"
black = "^22.12.0"
pylint-django = "^2.5.3"
pylint-celery = "^0.3"
pre-commit = "^2.21.0"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
django-coverage-plugin = "^3.0.0"
pytest-django = "^4.5.2"
gunicorn = "^20.1.0"
sentry-sdk = "^1.12.0"
django-anymail = {extras = ["mailgun"], version = "^9.1"}
django-polymorphic = "^3.1.0"
django-jazzmin = "^2.6.0"
django-cacheops = "^6.1"
django-extra-settings = "^0.9.1"
psycopg2-binary = "^2.9.5"
django-cms = "^3.11.1"
django-sekizai = "^4.0.0"
amzqr = "^0.0.1"
django-active-link = "^0.1.8"
channels = "^4.0.0"
django-upload-validator = "^1.1.6"
markdown = "^3.4.3"
preview-generator = {extras = ["all"], version = "^0.29"}
pydotplus = "^2.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
