[tool.poetry]
name = "akarpov"
version = "0.1.0"
description = ""
authors = ["Alexandr Karpov <alexandr.d.karpov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2023.3"
psutil = "^5.9.5"
python-slugify = "^7.0.0"
pillow = "^9.5.0"
argon2-cffi = "^21.3.0"
whitenoise = "^6.3.0"
redis = "^4.4.0"
hiredis = "^2.2.3"
celery = {extras = ["redis"], version = "^5.3.1"}
django-celery-beat = "^2.5.0"
flower = "^1.2.0"
django = "^4.2"
django-health-check = "^3.17.0"
django-structlog = "^5.1.0"
django-environ = "^0.9.0"
django-model-utils = "^4.3.1"
django-allauth = "^0.54.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
django-redis = "^5.2.0"
django-ckeditor = "^6.5.1"
django-colorfield = "^0.8.0"
djangorestframework = "^3.14.0"
django-rest-auth = "^0.9.5"
django-cors-headers = "^4.0.0"
drf-spectacular = "^0.26.2"
werkzeug = {extras = ["watchdog"], version = "^2.3.4"}
ipdb = "^0.13.13"
watchfiles = "^0.18.1"
mypy = "^0.991"
django-stubs = {extras = ["compatible-mypy"], version = "^1.14.0"}
pytest = "^7.3.0"
pytest-sugar = "^0.9.6"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.8.0"}
sphinx = "^7.0.0"
sphinx-autobuild = "^2021.3.14"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
coverage = "^7.2.5"
black = "^22.12.0"
pylint-django = "^2.5.3"
pylint-celery = "^0.3"
pre-commit = "^3.3.1"
factory-boy = "^3.2.1"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.1"
django-coverage-plugin = "^3.0.0"
pytest-django = "^4.5.2"
gunicorn = "^20.1.0"
sentry-sdk = "^1.21.0"
django-anymail = {extras = ["mailgun"], version = "^10.0"}
django-polymorphic = "^3.1.0"
django-jazzmin = "^2.6.0"
django-cacheops = "^6.1"
django-extra-settings = "^0.9.1"
psycopg2-binary = "^2.9.5"
django-cms = "^3.11.1"
django-sekizai = "^4.1.0"
amzqr = "^0.0.1"
django-active-link = "^0.1.8"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-upload-validator = "^1.1.6"
markdown = "^3.4.3"
pydotplus = "^2.0.2"
preview-generator = "^0.29"
uuid = "^1.30"
mutagen = "^1.46.0"
pytube = "^12.1.3"
ytmusicapi = "^1.0.2"
pydub = "^0.25.1"
python-mpd2 = "^3.0.5"
yandex-music = "^2.1.1"
pyjwt = "^2.7.0"
rawpy = "^0.18.1"
xvfbwrapper = "^0.2.9"
vtk = "^9.2.6"
ffmpeg-python = "^0.2.0"
cairosvg = "^2.7.0"
textract = "^1.6.5"
spotipy = "2.16.1"
django-robots = "^5.0"
django-tables2 = "^2.5.3"
django-filter = "^23.2"
tablib = "^3.4.0"
django-location-field = "^2.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
